Add Alamofire for easier http requests Add SwiftyJSON for easier json decoding Add function to get passwords from given url, password and username Tests and debugging

--- a/Nextcloud Passwords/Podfile
+++ b/Nextcloud Passwords/Podfile
@@ -7,5 +7,7 @@ target 'Nextcloud Passwords' do
 
   # Pods for Nextcloud Passwords
   pod 'SwiftKeychainWrapper'
+  pod 'SwiftyJSON', '~> 4.0'
+  pod 'Alamofire'
 
 end
